# NGalaxy

./: .gitignore  CMakeLists.txt  README.md  galaxy.cpp
common/: CMakeLists.txt  shared.hpp
cuda/: CMakeLists.txt  galaxy_cuda.cpp  galaxy_kernel.cu
cuda/2D/: CMakeLists.txt  galaxy_cuda_2D.cpp  galaxy_kernel_2D.cu
cuda/global/: CMakeLists.txt  galaxy_cuda_global.cpp  galaxy_kernel_global.cu
opencl/: CMakeLists.txt  galaxy_kernel.cl  galaxy_opencl.cpp
opencl/2D/: CMakeLists.txt  galaxy_kernel_2D.cl  galaxy_opencl_2D.cpp
opencl/global/: CMakeLists.txt  galaxy_kernel_global.cl  galaxy_opencl_global.cpp
sequential/: CMakeLists.txt  galaxy_sequential.cpp
